# advent-of-code

./: .gitignore  readme.md
2022/: .ocamlformat  advent-of-code.opam  dune-project
2023/: build.gradle.kts
2023/src/: Day04.kt  Day06.kt  Day07.kt  Day08.kt  Day09.kt  Day10.kt  Day11.kt  Day21.kt  Day22.kt  Day23.kt
2024/: Cargo.toml  audit.toml
2024/src/: main.rs
2024/src/days/: day01.rs  day02.rs  day03.rs  day04.rs  day05.rs  day06.rs  day07.rs  day08.rs  day09.rs  day10.rs  day11.rs  day12.rs  day13.rs  day14.rs  day15.rs  day16.rs  day17.rs  day18.rs  day19.rs  day20.rs  day21.rs  day22.rs  day23.rs  day24.rs  day25.rs  mod.rs
2025/: Cargo.toml  audit.toml
2025/src/: main.rs
2025/src/days/: day01.rs  day02.rs  day03.rs  day04.rs  day05.rs  day06.rs  day07.rs  day08.rs  day09.rs  day10.rs  day11.rs  day12.rs  mod.rs
src/: Day01.kt  Day02.kt  Day03.kt  Day04.kt  Day05.kt  Day06.kt  Day07.kt  Day08.kt  Day09.kt  Day10.kt  Day11.kt  Day12.kt  Day13.kt  Day14.kt  Day15.kt  Day16.kt  Day17.kt  Day18.kt  Day19.kt  Day20.kt  Day24.kt  Day25.kt  Utils.kt  input.ts  mod.ts
src/day1/: mod.ts
src/day2/: mod.ts
src/day3/: mod.ts
src/day4/: mod.ts
src/day5/: mod.ts
src/day6/: mod.ts
src/day7/: mod.ts
